Added other stores pages

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,8 +42,8 @@ body {
   background-size: cover;
   position: relative;
   overflow-y: scroll;
-  height: 100vh;
-  max-height: 100vh;
+  height: auto;
+  min-height: 100vh;
 }
 
 h1,
