--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,8 +25,8 @@ body {
   background-size: cover;
   position: relative;
   overflow-y: scroll;
-  height: 100vh;
-  max-height: 100vh;
+  height: auto;
+  min-height: 100vh;
 }
 
 h1,
