--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #696373;
   --primary-color: #be7d3f;
+  --text-color: #696373;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
 }
 
 * {
@@ -17,41 +20,102 @@
     --foreground: #ededed;
   }
 }
+html,
+body {
+  height: 100vh; /* Full viewport height */
+  max-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Prevent body from scrolling */
+}
+
 body {
   color: var(--foreground);
-  padding: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../../public/app-bg.jpg");
-  background-size: cover;
+  font-family: var(--font-poppins);
+  background-size: contain;
   position: relative;
-  overflow-y: scroll;
-  height: auto;
-  min-height: 100vh;
+}
+body.light {
+  text-shadow: 1px 1px 0px white;
+  background-image: url("../../public/images/BLATVODKA-app-bg.jpg");
+  background-color: white;
+  background-repeat: no-repeat;
+  background-position: center -70px;
+  background-size: 130%;
+}
+body.light::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background: white;
+  opacity: 0.5;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+body.dark {
+  background-repeat: no-repeat;
+  background-color: black;
+  background-position: 58%;
+  background-size: 200%;
 }
 
 h1,
-h2 {
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-montserrat);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+h1.main-title {
+  font-size: 3rem;
+  font-weight: 700;
   color: var(--primary-color);
   margin-bottom: 20px;
-  font-size: 1.4rem;
 }
-h1.main-title,
-h2.main-title {
-  font-size: 3rem;
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0px;
 }
 
 main {
+  position: relative;
   height: 100%;
   width: 100%;
+  overflow-y: auto;
+}
+
+p.store-title {
+  font-weight: 700;
 }
 
 .frosted-card {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 10px;
   padding: 15px;
   margin-bottom: 0.6rem;
+  position: relative;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background-image: url("https://transparenttextures.com/patterns/light-alum.png");
 }/*# sourceMappingURL=globals.css.map */
