--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,8 +4,11 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #696373;
   --primary-color: #be7d3f;
+  --text-color: #696373;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
 }
 
 * {
@@ -18,109 +21,98 @@
     --foreground: #ededed;
   }
 }
-
+html,
+body {
+  height: 100vh; /* Full viewport height */
+  max-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Prevent body from scrolling */
+}
 body {
   color: var(--foreground);
-  // background: var(--background);
-  padding: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  // Option 1
-  // background: rgb(167,159,162);
-  // background: linear-gradient(90deg, rgba(167,159,162,1) 0%, rgba(255,255,255,1) 2%, rgba(236,236,238,1) 5%, rgba(235,235,235,1) 95%, rgba(255,255,255,1) 99%, rgba(167,159,162,1) 100%);
-  // Option 2
-  // background: rgb(255, 255, 255);
-  // background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(235, 235, 235, 1) 5%, rgba(235, 235, 235, 1) 97%, rgba(255, 255, 255, 1) 100%);
-  // Option 3
-  // background: rgb(255, 255, 255);
-  // background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 1) 97%, rgba(235, 235, 235, 1) 100%);
-  // option 4
-  // background: url("https://www.transparenttextures.com/patterns/brushed-alum.png");
-  background-image: url("../../public/app-bg.jpg");
-  // lighten the background image
-  // background-color: rgba(255, 255, 255, 0.5);
-  // background-blend-mode: lighten;
-  background-size: cover;
+  font-family: var(--font-poppins);
+  background-size: contain;
   position: relative;
-  overflow-y: scroll;
-  height: auto;
-  min-height: 100vh;
-}
-
-h1,
-h2 {
-  color: var(--primary-color);
-  margin-bottom: 20px;
-  font-size: 1.4rem;
-  &.main-title {
-    font-size: 3rem;
-    // font-weight: 400;
+  &.light {
+    text-shadow: 1px 1px 0px white;
+    // background-image: url("../../public/images/app-bg.jpg");
+    background-image: url("../../public/images/BLATVODKA-app-bg.jpg");
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center -70px;
+    background-size: 130%;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      backdrop-filter: blur(5px);
+      background: white;
+      opacity: 0.5;
+      pointer-events: none;
+      user-select: none;
+    }
+  }
+  &.dark {
+    // background-image: url("../../public/images/vodka-blat.jpg");
+    background-repeat: no-repeat;
+    background-color: black;
+    background-position: 58%;
+    background-size: 200%;
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-montserrat);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+h1.main-title {
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+h2 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0px;
+}
 main {
+  position: relative;
   height: 100%;
   width: 100%;
+  overflow-y: auto;
   // padding: 10px;
 }
 
+p {
+  &.store-title {
+    font-weight: 700;
+  }
+}
 .frosted-card {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 1);
+  border-radius: 10px;
   padding: 15px;
   margin-bottom: 0.6rem;
+  position: relative;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background-image: url("https://transparenttextures.com/patterns/light-alum.png");
 }
-// Bubble animation
-// @keyframes bubbleAnimation {
-//   0% {
-//     opacity: 0;
-//     transform: translateY(0) scale(0.5);
-//   }
-//   50% {
-//     opacity: 1;
-//     transform: translateY(-50px) scale(1);
-//   }
-//   100% {
-//     opacity: 0;
-//     transform: translateY(-100px) scale(1.5);
-//   }
-// }
-
-// // Generate random bubbles (1-2 per cycle)
-// @for $i from 1 through 2 {
-//   $delay: random(10) + s; // Random delay between 1s and 10s
-//   $left: random(100) * 1%; // Random horizontal position
-//   $size: random(10) + px; // Bubble size (1px - 10px)
-
-//   .bubble-#{$i} {
-//     position: absolute;
-//     bottom: -10px;
-//     left: $left;
-//     width: $size;
-//     height: $size;
-//     background-color: rgba(255, 255, 255, 0.6);
-//     border-radius: 50%;
-//     animation: bubbleAnimation 10s ease-in-out infinite;
-//     animation-delay: $delay;
-//     pointer-events: none;
-//   }
-// }
-
-// // Add multiple bubble elements inside body dynamically
-// body {
-//   @for $i from 1 through 2 {
-//     &::before {
-//       content: "";
-//       display: block;
-//       @extend .bubble-#{$i};
-//     }
-//     &::after {
-//       content: "";
-//       display: block;
-//       @extend .bubble-#{$i};
-//     }
-//   }
-// }
