Replaced Maplibre-gl, fixed CSS, and updated Readme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,19 +81,16 @@ h1.main-title {
   font-size: 3rem;
   font-weight: 700;
   color: var(--primary-color);
-  margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 500;
   color: var(--primary-color);
-  margin-bottom: 20px;
 }
 
 h3 {
   font-size: 1.25rem;
-  margin-bottom: 0px;
 }
 
 main {
@@ -117,4 +114,13 @@ p.store-title {
   position: relative;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+}
+
+.maplibregl-map {
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+.maplibregl-map canvas {
+  border: 1px solid white;
+  border-radius: 10px;
 }/*# sourceMappingURL=globals.css.map */
