--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,8 +19,10 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --text-color: #ededed; // Ensure consistent color value
   }
 }
+
 html,
 body {
   height: 100vh; /* Full viewport height */
@@ -29,6 +31,7 @@ body {
   padding: 0;
   overflow: hidden; /* Prevent body from scrolling */
 }
+
 body {
   color: var(--foreground);
   font-family: var(--font-poppins);
@@ -36,7 +39,6 @@ body {
   position: relative;
   &.light {
     text-shadow: 1px 1px 0px white;
-    // background-image: url("../../public/images/app-bg.jpg");
     background-image: url("../../public/images/BLATVODKA-app-bg.jpg");
     background-color: white;
     background-repeat: no-repeat;
@@ -57,7 +59,6 @@ body {
     }
   }
   &.dark {
-    // background-image: url("../../public/images/vodka-blat.jpg");
     background-repeat: no-repeat;
     background-color: black;
     background-position: 58%;
@@ -74,37 +75,44 @@ h6 {
   font-family: var(--font-montserrat);
   text-transform: uppercase;
   font-weight: 700;
+  color: var(--text-color); // Ensure consistent color value
 }
+
 h1.main-title {
   font-size: 3rem;
   font-weight: 700;
   color: var(--primary-color);
 }
+
 h2 {
   font-size: 1.4rem;
   font-weight: 500;
   color: var(--primary-color);
 }
+
 h3 {
   font-size: 1.25rem;
 }
+
 a {
   display: block;
   width: 100%;
 }
+
 main {
   position: relative;
   height: 100%;
   width: 100%;
   overflow-y: auto;
-  // padding: 10px;
 }
 
 p {
   &.store-title {
     font-weight: 700;
+    color: var(--text-color); // Ensure consistent color value
   }
 }
+
 .frosted-card {
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
