--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 :root {
   --background: #ededed;
   --foreground: 262.5deg 7.48% 41.96%;
+  --links: 262.5deg 7.48% 26;
   --primary-color: #be7d3f;
   --text-color: 262.5deg 7.48% 41.96%;
   --font-montserrat: "Montserrat", sans-serif;
@@ -39,7 +40,7 @@
   --primary-foreground: 0 0% 98%;
   --secondary: 240 4.8% 95.9%;
   --secondary-foreground: 240 5.9% 10%;
-  --muted: 205.21deg 80.95% 28.82%;
+  --muted: 184.85deg 80.95% 28.82% / 40%;
   --muted-foreground: 0deg 0% 100%;
   --accent: 240 4.8% 95.9%;
   --accent-foreground: 240 5.9% 10%;
@@ -83,14 +84,15 @@ body {
   font-family: var(--font-poppins);
   background-size: contain;
   position: relative;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 body.light {
-  text-shadow: 1px 1px 0px white;
   background-image: url("../../public/images/BLATVODKA-app-bg.jpg");
-  background-color: white;
   background-repeat: no-repeat;
   background-position: center -70px;
-  background-size: 130%;
+  background-size: 160%;
+  text-shadow: 1px 1px 0px white;
 }
 body.light::before {
   content: "";
@@ -99,8 +101,6 @@ body.light::before {
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   background: white;
   opacity: 0.5;
   pointer-events: none;
@@ -113,6 +113,10 @@ body.dark {
   background-color: black;
   background-position: 58%;
   background-size: 200%;
+}
+
+a {
+  color: hsl(var(--links));
 }
 
 /* Typography */
@@ -186,8 +190,8 @@ main #Hero {
   position: relative;
   overflow: hidden;
   background-color: rgba(255, 255, 255, 0.2); /* Frosted glass effect */
-  backdrop-filter: blur(3px); /* Slight blur */
-  -webkit-backdrop-filter: blur(3px); /* Slight blur for Safari */
+  backdrop-filter: blur(6px); /* Slight blur */
+  -webkit-backdrop-filter: blur(6px); /* Slight blur for Safari */
   height: 230px;
 }
 main #Hero .lower-zip {
@@ -227,15 +231,15 @@ main #Hero .lower-zip input::placeholder {
 
 /* Frosted Card */
 .frosted-card {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border: 1px solid rgb(255, 255, 255);
   border-radius: 10px;
   padding: 15px;
   margin-bottom: 0.6rem;
   position: relative;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 .frosted-card.selected-store {
   border-color: var(--primary-color);
@@ -286,6 +290,10 @@ button.outline {
   font-weight: 600 !important;
 }
 
+.tiendas-tabs {
+  -webkit-backdrop-filter: blur(7px);
+          backdrop-filter: blur(7px);
+}
 .tiendas-tabs .data-\[state\=active\]\:shadow[data-state=active] {
   font-weight: 600;
 }
