Adding Skeleton and loading when submitting form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -356,4 +356,11 @@ button.outline {
 /* Maps */
 .maplibregl-ctrl-bottom-right {
   display: none;
-}/*# sourceMappingURL=globals.css.map */
+}@layer base {}@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
