--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -222,11 +222,22 @@ main {
       button {
         position: absolute;
         border-radius: 50px;
-        opacity: 0.7;
-        right: 4px;
+        opacity: 1;
         bottom: 3px;
         height: 38px;
         z-index: 2;
+        &.useZip {
+          right: 23px;
+          border-bottom-right-radius: 0;
+          border-top-right-radius: 0;
+          z-index: 1;
+        }
+        &.useLocation {
+          right: 4px;
+          width: 38px;
+          outline: 2px solid white;
+          z-index: 9;
+        }
       }
 
       input {
