--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,13 +106,12 @@ body {
   font-family: var(--font-poppins);
   background-size: contain;
   position: relative;
-  background-image: url("../../public/images/BLATVODKA-app-bg.jpg");
+  background-image: url("../../public/images/blat_bottle.jpg");
   background-repeat: no-repeat;
-  background-position: center -70px;
-  background-size: 160%;
+  background-position: center;
+  background-size: cover;
 }
 body::before {
-  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -124,6 +123,10 @@ body::before {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+#LoadingScreen p {
+  color: hsl(var(--foreground));
 }
 
 a {
